<resources>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="correct">Correct</string>
    <string name="not_correct">Not Correct</string>
    <string name="stage">STAGES</string>
    <string name="score">SCORE:</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="discribe">Welcome to LOGO QUIZ - do you think you can recognize all of our logo\'s?  This quiz is based on varieties of different type\'s of logo\'s collection. If this is the first time playing Please follow the tutorial that appears in the first step. The game is not complicated to understand and is also intended for children. To finish the game you must go through 24 different stages, 8 in each level. In each level you must win the first six stages in order for the next level to open for you. During the game try not to use external sources at all! The game is designed to test your knowledge and familiarity with logos...   will you be good enough to win? Developed by Niv Behar and Dor Cohen.</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="username">UserName</string>
    <string name="password">Passward</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="email">Email</string>
    <string name="_">*</string>
    <string name="profile">Profile</string>
    <string name="start_game">Start Game</string>
    <string name="logo_quiz">Logo Quiz</string>
    <string name="complete">Complete</string>
    <string name="completed">completed</string>
    <string name="next">next</string>
    <string name="menu">MENU</string>
    <string name="level_three">Level Three</string>
    <string name="level_two">Level Two</string>
    <string name="level_one">Level one</string>
    <string name="play">Play</string>
    <string name="msg">Please fill your profile in order to play..</string>
    <string name="logo">LOGO QUIZ</string>
    <string name="the_world_logo_game">The World Logo Game</string>
    <string name="tutorial">Tutorial</string>
    <string name="for_choose_press_on_the_letter">for choose press on the letter</string>
    <string name="finish">finish</string>
    <string name="home">Home</string>
    <string name="app_name">" Logo Quiz"</string>
    <string name="about_us">About Us</string>
    <string name="progress">Progress</string>
    <string name="points">Points</string>
    <string name="level_two_is_now_open">Level 2 is now open</string>
    <string name="level_three_is_now_open">Level 3 is now open</string>
    <string name="great_job_you_finished_the_game">Great job you finished the game</string>
    <string name="favorite" />
    <string name="step">Step</string>
    <string name="worth">is worth</string>
</resources>