<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/bg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical">
        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logo_quiz"
            android:gravity="center|top"
            android:textSize="75sp"
            android:fontFamily="@font/oli"
            android:layout_marginBottom="10dp"
            android:textColor="@color/fadeblack"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">
        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg"
            android:gravity="center|top"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="monospace"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorPrimary"
            android:visibility="invisible"
            android:id="@+id/fir"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"/>

        <LinearLayout
            android:id="@+id/usrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:orientation="vertical">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img"
                android:layout_width="125dp"
                android:layout_height="125dp"
                app:civ_border_color="@color/black"
                app:civ_border_width="2dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/usr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/bold"
                android:textColor="@color/fadeblack"
                android:textSize="30sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/start"
                    android:layout_width="270dp"
                    android:layout_height="77dp"
                    android:background="@drawable/strt"
                    android:fontFamily="@font/fifth"
                    android:text="@string/play"
                    android:textColor="@color/start"
                    android:textSize="65sp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center|top">
                        <pl.droidsonroids.gif.GifImageView
                            android:layout_width="50dp"
                            android:layout_height="60dp"
                            android:src="@drawable/pro2"
                            android:id="@+id/prol"
                            android:visibility="invisible"
                            android:layout_marginEnd="6dp"/>
                <Button
                    android:id="@+id/profile"
                    android:layout_width="270dp"
                    android:layout_height="77dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/strt"
                    android:fontFamily="@font/fifth"
                    android:scaleType="fitCenter"
                    android:text="@string/profile"
                    android:textColor="@color/start"
                    android:textSize="62sp"/>
                        <pl.droidsonroids.gif.GifImageView
                            android:layout_width="50dp"
                            android:layout_height="60dp"
                            android:id="@+id/pror"
                            android:visibility="invisible"
                            android:src="@drawable/pro"
                            android:layout_marginStart="6dp"/>
                    </LinearLayout>


                <Button
                    android:id="@+id/leader"
                    android:layout_width="270dp"
                    android:layout_height="77dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/strt"
                    android:fontFamily="@font/fifth"
                    android:scaleType="fitCenter"
                    android:text="@string/progress"
                    android:textColor="@color/start"
                    android:textSize="60sp" />
                <Button
                    android:id="@+id/intruction"
                    android:layout_width="270dp"
                    android:layout_height="77dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/strt"
                    android:fontFamily="@font/fifth"
                    android:scaleType="fitCenter"
                    android:text="@string/about_us"
                    android:textColor="@color/start"
                    android:textSize="60sp" />



            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>