<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/bg"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">
        <Button
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@drawable/back"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="15dp"
            android:id="@+id/back"
            />

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical"
    android:layoutDirection="ltr">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="43sp"
        android:textColor="@color/num"
        android:text="@string/completed"
        android:layout_gravity="center"
        android:background="@color/fadewhite"
        android:textStyle="bold"
        android:fontFamily="@font/bold"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:id="@+id/compplete"
        />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/bmw"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/up_letter_background"
            android:layout_margin="5dp"
            android:textColor="#000"
            android:textSize="30dp"
            android:id="@+id/bUp_btn"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/up_letter_background"
            android:layout_margin="5dp"
            android:textColor="#000"
            android:textSize="30dp"
            android:id="@+id/mUp_btn"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/up_letter_background"
            android:layout_margin="5dp"
            android:textColor="#000"
            android:textSize="30dp"
            android:id="@+id/wUp_btn"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/down_letters_background"
            android:layout_margin="5dp"
            android:text="B"
            android:textColor="#fff"
            android:textSize="30dp"
            android:id="@+id/bDown_btn"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/down_letters_background"
            android:layout_margin="5dp"
            android:text="C"
            android:textColor="#fff"
            android:textSize="30dp"
            android:id="@+id/cDown_btn"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/down_letters_background"
            android:layout_margin="5dp"
            android:text="X"
            android:textColor="#fff"
            android:textSize="30dp"
            android:id="@+id/xDown_btn"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/down_letters_background"
            android:layout_margin="5dp"
            android:text="S"
            android:textColor="#fff"
            android:textSize="30dp"
            android:id="@+id/sDown_btn"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/down_letters_background"
            android:layout_margin="5dp"
            android:text="E"
            android:textColor="#fff"
            android:textSize="30dp"
            android:id="@+id/eDown_btn"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/kDown_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/down_letters_background"
            android:text="K"
            android:textColor="#fff"
            android:textSize="30dp" />

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/down_letters_background"
            android:layout_margin="5dp"
            android:text="T"
            android:textColor="#fff"
            android:textSize="30dp"
            android:id="@+id/tDown_btn"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/down_letters_background"
            android:layout_margin="5dp"
            android:text="P"
            android:textColor="#fff"
            android:textSize="30dp"
            android:id="@+id/pDown_btn"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/down_letters_background"
            android:layout_margin="5dp"
            android:text="W"
            android:textColor="#fff"
            android:textSize="30dp"
            android:id="@+id/wDown_btn"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/down_letters_background"
            android:layout_margin="5dp"
            android:text="M"
            android:textColor="#fff"
            android:textSize="30sp"
            android:id="@+id/mDown_btn"/>
    </LinearLayout>
    <Button
    android:id="@+id/next"
    android:layout_width="200dp"
    android:layout_height="70dp"
    android:background="@drawable/strt"
    android:fontFamily="@font/fifth"
    android:text="@string/next"
    android:textColor="@color/start"
    android:textSize="50sp"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:visibility="invisible"
    android:enabled="false" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/level_two_is_now_open"
        android:fontFamily="@font/oli"
        android:textSize="33sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:visibility="invisible"
        android:id="@+id/level_two_open_tv"/>

</LinearLayout>
</RelativeLayout>